# worldwide

./: .gitignore  .rubocop.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  LICENSE.md  README.md  Rakefile  formats.md  iana.json  iana_zones.txt  rails.yml  scrape.rb  translation.yml  worldwide.gemspec
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci-rust.yml  ci-typescript.yml  ci.yml  cla.yml  npm-release.yml  rust-release.yml
data/: cldr.yml  country_codes.yml  extant_outcodes.yml  iana_to_rails_time_zone.yml  top_locales.yml
data/cldr/: aliases.yml  currency_digits_and_rounding.yml  likely_subtags.yml  metazones.yml  numbering_systems.yml  parent_locales.yml  paths.txt  rbnf_root.yml  region_currencies.yml  region_validity.yml  segments_root.yml  territories_containment.yml  versions.yml  week_data.yml  windows_zones.yml
data/other/: paths.txt
data/regions/: AC.yml  AD.yml  AE.yml  AR.yml  AU.yml  AW.yml  AZ.yml  BB.yml  BF.yml  BG.yml  BH.yml  BJ.yml  BL.yml  BM.yml  BN.yml  BO.yml  BR.yml  BS.yml  BV.yml  BZ.yml  CA.yml  CC.yml  CD.yml  CF.yml  CG.yml  CI.yml  CK.yml  CL.yml  CM.yml  CN.yml  CO.yml  CR.yml  CW.yml  DE.yml  EG.yml  EH.yml  ER.yml  ET.yml  FI.yml  FJ.yml  (+107 more)
db/data/: iana_to_rails_time_zone.yml  world.yml
docs/: address_format_strings.md
docs/notebooks/: README.md
lang/rust/: Cargo.toml  README.md
lang/rust/worldwide-icu4x-data/: Cargo.toml
lang/rust/worldwide-icu4x-data/data/: icu4x.postcard
lang/rust/worldwide-icu4x-data/src/: lib.rs
lang/rust/worldwide-icu4x-datagen/: Cargo.toml
lang/rust/worldwide-icu4x-datagen/src/: main.rs
lang/rust/worldwide-icu4x-datagen/src/convert/: config.rs  dates.rs  error.rs  json_types.rs  likely_subtags.rs  lists.rs  locales.rs  mod.rs  numbers.rs  plurals.rs  supplemental.rs  writer.rs
lang/rust/worldwide-icu4x-parity/: Cargo.toml
lang/rust/worldwide-icu4x-parity/src/: main.rs
lang/typescript/: .eslintignore  .eslintrc  .gitignore  .prettierignore  .yarnrc.yml  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  rollup.config.mjs  rollup.config.ts  tsconfig.json  validate-region-yaml.ts  vitest.config.ts
lib/: worldwide.rb
lib/worldwide/: address.rb  address_validator.rb  business_names.rb  calendar.rb  cldr.rb  config.rb  currencies.rb  currency.rb  deprecated_time_zone_mapper.rb  discounts.rb  extant_outcodes.rb  field.rb  fields.rb  i18n_exception_handler.rb  lists.rb  locale.rb  locales.rb  localization_keys.rb  names.rb  numbers.rb  paths.rb  phone.rb  pluralization_helper.rb  plurals.rb  punctuation.rb  region.rb  regions.rb  regions_loader.rb  ruby_i18n_config.rb  scripts.rb  time_formatter.rb  time_zone.rb  units.rb  util.rb  version.rb  zip.rb
rake/cldr/: cleaner.rb  csv_reader.rb  currency_patches.rb  flatten_hash.rb  hash_utils.rb  locale_generator.rb  patch.rb  pluralization_subkey_expander.rb  puller.rb  region_patcher.rb  sort_yaml.rb  unflatten_hash.rb
rake/icu4x/: json_exporter.rb
rake/paths/: generator.rb
rake/tasks/: cldr.rake  icu4x.rake
test/: icu4x_parity_test.rb  test_helper.rb  worldwide_test.rb
test/worldwide/: address_formatting_test.rb  address_normalization_test.rb  address_test.rb  address_validator_test.rb  business_names_test.rb  calendar_test.rb  cldr_test.rb  config_test.rb  currencies_test.rb  currency_test.rb  deprecated_time_zone_mapper_test.rb  discounts_test.rb  field_data_consistency_test.rb  field_test.rb  i18n_exception_handler_test.rb  lists_test.rb  locale_test.rb  locales_test.rb  localization_keys_test.rb  names_fallback_test.rb  names_test.rb  numbers_test.rb  phone_test.rb  pluralization_helper_test.rb  plurals_test.rb  punctuation_test.rb  region_data_consistency_test.rb  region_data_test_helper.rb  region_test.rb  region_validation_test.rb  region_yml_consistency_test.rb  regions_test.rb  ruby_i18n_config_test.rb  scripts_test.rb  time_formatter_test.rb  time_zone_data_consistency_test.rb  time_zone_test.rb  units_test.rb  zip_test.rb  (+1 more)
(+9141 files in other folders)
